[package]
name = "schnauzer"
version = "0.2.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Arsynth/schnauzer"
keywords = ["macho", "mach-o", "binary"]
categories = ["command-line-interface"]
description = "Library for parsing Mach-O files"
exclude = [
    "testable/*"
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
scroll = { version = "0.11.0", features = ["derive"] }
uuid = "1.3.1"
colored = "2"
schnauzer-derive = { version = "0.1.0", path = "schnauzer-derive" }